--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
     "errorhandler": "~1.5.0",
-    "express": "~4.16.2",
+    "express": ">=4.3.0",
     "express-handlebars": "~3.0.0",
     "method-override": "~2.3.10",
     "moment": "^2.21.0",
-    "morgan": "~1.9.0"
+    "morgan": ">=1.9.1"
   }
 }
